Fix select2 fields max-width to avoid field overlapping - fix page horizontal scroll

--- a/sass/elements/_elements.scss
+++ b/sass/elements/_elements.scss
@@ -1,5 +1,6 @@
 html {
 	box-sizing: border-box;
+	overflow-x: hidden;
 }
 
 *,
@@ -15,6 +16,7 @@ html {
 
 body {
 	background: $color__background-body; /* Fallback for when there is no custom background color defined. */
+	width: 100vw;
 
 	&.page,
 	&.post {
