--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ Author: YITH
 Author URI: https://yithemes.com
 Description: Proteo is a modern, fast and fully customizable WooCommerce theme. Designed and developed by YITH - a team of top developers of premium themes -  with a beautiful UI, a minimal design and an optimized code, is perfect for each kind of site or shop. With the Proteo Wizard you can import our demo content with just a few clicks - in less than 2 minutes! -  and easily customize it using the advanced front-end customizer. Proteo is the best solution if you want a complete WooCommerce theme that works perfectly also in mobile devices and start quickly to sell your products with WooCommerce without technical knowledge. Works perfectly with page builders like Elementor, Gutenberg & Visual composer. Key features: # WooCommerce Ready # Responsive with a perfect mobile design # Compatible with Elementor, Gutenberg, Visual Composer and others page builders # Translation Ready # Frontend customizer with hundred of options to customize header, footer, pages, typography, style, ecc.  # Google fonts support # Regularly updated and improved with new demos and advanced features # Support to all YITH plugins. Check all our Proteo demos: https://proteo.yithemes.com/
 
-Version: 1.6.0.27
+Version: 1.6.0.28
 License: GPLv2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: yith-proteo
@@ -5091,6 +5091,7 @@ big {
 --------------------------------------------------------------*/
 html {
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 *,
@@ -5107,6 +5108,7 @@ html {
 body {
   background: #fff;
   /* Fallback for when there is no custom background color defined. */
+  width: 100vw;
 }
 body.page, body.post {
   margin: 0;
@@ -5571,6 +5573,10 @@ select:focus + .separator,
 .woocommerce a.selectBox.selectBox-dropdown:focus + .separator {
   transform: scaleX(1) translateY(-2px);
   opacity: 1;
+}
+
+.select2-container {
+  max-width: 100%;
 }
 
 input::-webkit-input-placeholder {
